<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/convert_binary_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.antsiferov.converter.ConvertBinaryActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/enterBinaryNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:id="@+id/tvEnterBinaryNumber" />

        <EditText
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etEnterBinaryNumber" />

    </LinearLayout>

    <Button
        android:text="@string/btnConvert"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:id="@+id/button" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="35dp"
            android:layout_gravity="center">

            <TextView
                android:text="@string/inverseCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:id="@+id/tvInverseCode" />

            <TextView
                android:text=""
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvInverseCodeShow" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:text="@string/additionalCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:id="@+id/tvAdditionalCode" />

            <TextView
                android:text=""
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvAdditionalCodeShow" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
