<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.antsiferov.converter.MainActivity"
    android:weightSum="1"
    android:background="@color/main"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/first_radio_group"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/binary"
                    android:id="@+id/first_binary"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/octal"
                    android:id="@+id/first_octal"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decimal"
                    android:id="@+id/first_decimal"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hexadecimal"
                    android:id="@+id/first_hexadecimal"
                    android:checked="false" />
            </RadioGroup>

            <EditText
                android:layout_width="250dp"
                android:textAlignment="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="text"
                android:id="@+id/enter_num" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="202dp"
                    android:layout_height="match_parent"
                    android:textSize="12dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Разрядность переведенного числа: "
                    android:id="@+id/capacity" />

                <EditText
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="11dp"
                    android:inputType="number"
                    android:id="@+id/enter_capacity" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/calc_button"
            android:id="@+id/calc" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/second_radio_group"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/binary"
                    android:id="@+id/second_binary"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/octal"
                    android:id="@+id/second_octal"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decimal"
                    android:id="@+id/second_decimal"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hexadecimal"
                    android:id="@+id/second_hexadecimal"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="250dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Результат"
                android:id="@+id/show_result" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>