<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.antsiferov.converter.SettingsActivity"
    android:theme="@android:style/Theme.Dialog"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:text="@string/setting_red"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/tvRed" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="255"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:id="@+id/tvRedShowColor"
                android:layout_weight="1" />

            <SeekBar
                android:layout_width="235dp"
                android:max="255"
                android:progress="255"
                android:layout_height="wrap_content"
                android:id="@+id/sbRed"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:text="@string/setting_green"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/tvGreen" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="255"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:id="@+id/tvGreenShowColor"
                android:layout_weight="1" />

            <SeekBar
                android:layout_width="235dp"
                android:max="255"
                android:progress="255"
                android:layout_height="wrap_content"
                android:id="@+id/sbGreen"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/setting_blue"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/tvBlue" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="255"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:id="@+id/tvBlueShowColor"
                android:layout_weight="1" />

            <SeekBar
                android:layout_width="235dp"
                android:max="255"
                android:progress="255"
                android:layout_height="wrap_content"
                android:id="@+id/sbBlue"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="#FFFFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:id="@+id/tvMainColorShow" />
</LinearLayout>
